--- a/arch/arm/configs/msm8916_sec_fortuna3g_eur_defconfig
+++ b/arch/arm/configs/msm8916_sec_fortuna3g_eur_defconfig
@@ -1,6 +1,9 @@
 CONFIG_SEC_FORTUNA_PROJECT=y
 CONFIG_MACH_FORTUNA3G_EUR=y
 
+# HARD RESET
+CONFIG_RESTART_REASON_SEC_PARAM=y
+
 # SS Pinctrl Driver
 CONFIG_SEC_GPIO_SETTINGS=y
 
@@ -35,8 +38,11 @@ CONFIG_REGULATOR_RT5033=y
 CONFIG_MSM_VIBRATOR=y
 
 #SENSOR
+CONFIG_SENSORS=y
+CONFIG_SENSORS_CORE=y
 CONFIG_SENSORS_K303C=y
 CONFIG_SENSORS_GP2A002=y
+CONFIG_SENSORS_GP2A_VDD=y
 
 #FLASH
 CONFIG_FLASHLIGHT=y
@@ -48,56 +54,18 @@ CONFIG_FLED_RT5033_EXT_GPIO=y
 CONFIG_IMX219=y
 CONFIG_S5K5E3YX=y
 
-#Wifi
-#
-# Enable Qualcomm Wifi features
-#
-CONFIG_MSM_PIL_PRONTO=y
-CONFIG_WCNSS_CORE=y
-CONFIG_WCNSS_CORE_PRONTO=y
-CONFIG_WCNSS_MEM_PRE_ALLOC=y
-
-#
-# Wifi features (Qualcomm)
-#
-CONFIG_NET_CORE=y
-CONFIG_WIRELESS=y
-CONFIG_WIRELESS_EXT_SYSFS=y
-CONFIG_WEXT_CORE=y
-CONFIG_WEXT_PROC=y
-CONFIG_CFG80211=y
-CONFIG_CFG80211_DEFAULT_PS=y
-#CONFIG_CFG80211_ALLOW_RECONNECT is not set
-CONFIG_WLAN=y
-CONFIG_WIRELESS_EXT=y
-CONFIG_WEXT_PRIV=y
-CONFIG_MODULES=y
-CONFIG_MODULE_UNLOAD=y
-CONFIG_MODULE_FORCE_UNLOAD=y
-CONFIG_WCNSS_REGISTER_DUMP_ON_BITE =y
-
-#AUDIO
-CONFIG_RADIO_IRIS=y
-CONFIG_RADIO_IRIS_TRANSPORT=m
+#APC CPR QUOTIENT
+CONFIG_APC_CPR_QUOT_BOOST=y
 
 #optimize mmc block delay on resume
 #CONFIG_MMC_BLOCK_DEFERRED_RESUME=y
 
 # RTCC v3
 CONFIG_SWAP=y
+CONFIG_FRONTSWAP=y
 CONFIG_ZSMALLOC=y
-CONFIG_ZRAM=y
-CONFIG_RUNTIME_COMPCACHE=y
-CONFIG_KSWAPD_NOSWAP=y
+CONFIG_ZSWAP=y
 
 # DUAL SIM / SINGLE SIM Detection
 #CONFIG_CHECK_SIMSLOT_COUNT=y
 #CONFIG_CHECK_SIMSLOT_COUNT_GPIO=1008
-
-# TIMA LOG
-#CONFIG_ARCH_MSM8916_TIMA=y
-
-#CONFIG_TRACE_MODEM_MEM_FAIL=y
-
-#CONFIGURE Knox UID PID
-#CONFIG_KNOX_VPN_UID_PID=y
