--- a/arch/arm/boot/dts/samsung/msm8916/msm8916-sec-fortuna-sea-r07.dtsi
+++ b/arch/arm/boot/dts/samsung/msm8916/msm8916-sec-fortuna-sea-r07.dtsi
@@ -11,8 +11,9 @@
  */
 
 #include "msm8916.dtsi"
-#include "msm8916-pinctrl-sec-fortuna-r04.dtsi"
-#include "../../../../../../drivers/video/msm/mdss/samsung/HX8389C_GH9607501A/dsi_panel_HX8389C_GH9607501A_qhd_video.dtsi"
+#include "msm8916-pinctrl-sec-fortuna-sea-r07.dtsi"
+#include "../../../../../../drivers/video/msm/mdss/samsung/HX8389C_GH9607501A/dsi_panel_HX8389C_GH9607501A_qhd_video.dtsi" 
+#include "../../../../../../drivers/video/msm/mdss/samsung/S6D78A0_GH9607501A/dsi_panel_S6D78A0_GH9607501A_qhd_video.dtsi"
 #include "msm8916-camera.dtsi"
 #include "msm8916-camera-sensor-cdp-r02.dtsi"
 #include "msm8916-sec-fortuna-battery-r01.dtsi"
@@ -27,10 +28,18 @@
 		i2c9 = &i2c_9;
 		i2c10 = &i2c_10;
 		i2c11 = &i2c_11;
+		i2c12 = &i2c_12;
 	};
 };
 
 &soc {
+	samsung,simslot {
+		compatible = "simslot";
+		samsung,sim-slot = <&msm_gpio 106 0x1>;
+		//low-is-dual; // If the value of sim-slot gpio is 'low' in 'dual sim' device, you must set this boolean property.
+		status = "ok";
+	};
+
 	samsung,vibrator {
 		pinctrl-names = "tlmm_motor_en_active","tlmm_motor_en_suspend";
 		pinctrl-0 = <&motor_en_active>;
@@ -40,16 +49,23 @@
 		status = "ok";
 	};
 
-	i2c@78b9000 { /* BLSP1 QUP5 */
-	status = "ok";
+	i2c_12:i2c@12 {
+		cell-index = <12>;
+		compatible = "i2c-gpio";
+		i2c-gpio-scl = <&msm_gpio 19 0x00>;
+		i2c-gpio-sda = <&msm_gpio 18 0x00>;
+		i2c-gpio,delay-us = <1>;
+		#address-cells = <1>;
+		#size-cells = <0>;
+
 		bt532_ts_device@20 {
 			compatible = "zinitix,bt541_ts_device";
 			reg = <0x20>;
 			interrupt-parent = <&msm_gpio>;
 			interrupts = <13 0>;
 			pinctrl-names = "tsp_en_gpio_active", "tsp_en_gpio_suspend";
-			pinctrl-0 = <&tsp_en_active &tsp_id_active &int_active>;
-			pinctrl-1 = <&tsp_en_suspend &tsp_id_suspend>;
+			pinctrl-0 = <&tsp_en_active &tsp_id_active &int_active &tsp_i2c_active>;
+			pinctrl-1 = <&tsp_en_suspend &tsp_id_suspend &tsp_i2c_sleep>;
 			vddo-supply = <&pm8916_l6>;
 			zinitix,vdd_en-gpio = <&msm_gpio 73 0x01>;
 			tsp_id-gpio =  <&msm_gpio 56 0x01>;
@@ -60,27 +76,6 @@
 			zinitix,orientation = <0>;
 			zinitix,tsp_vdd_supply_type = <0>;
 			zinitix,pname = "SM-G5308W";
-		};
-		ist30xx_ts@50 {
-			compatible = "imagis,ist30xx-ts";
-			reg = <0x50>;
-			interrupt-parent = <&msm_gpio>;
-			interrupts = <13 0>;
-			pinctrl-names = "keyled_en_gpio_active", "keyled_en_gpio_suspend", "tsp_int_active", "tsp_en_gpio_active", "tsp_en_gpio_suspend", "tsp_id_gpio_active", "tsp_id_gpio_suspend";
-			pinctrl-0 = <&keyled_en_active>;
-			pinctrl-1 = <&keyled_en_suspend>;
-			pinctrl-2 = <&int_active>;
-			pinctrl-3 = <&tsp_en_active>;
-			pinctrl-4 = <&tsp_en_suspend>;
-			pinctrl-5 = <&tsp_id_active>;
-			pinctrl-6 = <&tsp_id_suspend>;
-			
-			vdd_en-gpio = <&msm_gpio 73 0x01>;
-			keyled_en-gpio = <&msm_gpio 60 0x01>;
-			tsp_id-gpio =  <&msm_gpio 56 0x01>;
-	//		vcc_i2c-supply = <&pm8916_l6>;
-			imagis,irq-gpio = <&msm_gpio 13 0x00>;
-			imagis,i2c-pull-up = <1>;
 		};
 	};
 
@@ -118,7 +113,7 @@
 		status="disable";
 	};
 
-       i2c_11:i2c@11 {
+		i2c_11:i2c@11 {
 		cell-index = <11>;
 		compatible = "i2c-gpio";
 		i2c-gpio-scl = <&msm_gpio 23 0x00>;
@@ -161,7 +156,9 @@
 				/* regulator-boot-on = "yes"; optional, exist = enabled */
 				/* regulator-always-on = "yes"; optional, exist = enabled */
 				/* regulator-ramp-delay = <100>; optional*/
+
 			};
+
 
 			rt5033_buck1 {
 				compatible = "richtek,rt5033-dcdc1";
@@ -172,6 +169,7 @@
 				/* regulator-boot-on = "yes"; optional, exist = enabled */
 				/* regulator-always-on = "yes"; optional, exist = enabled */
 				/* regulator-ramp-delay = <100>; optional*/
+
 			};
 
 			rt5033_fled {
@@ -188,8 +186,8 @@
 				rt5033,led1-gpio = <&msm_gpio 34 0x00>;
 				rt5033,led2-gpio = <&msm_gpio 36 0x00>;
 				pinctrl-names = "fled_default","fled_sleep";
-				pinctrl-0 = <&cam_sensor_flash_default>;
-				pinctrl-1 = <&cam_sensor_flash_sleep>;
+				pinctrl-0 = <&cam_flash_active>;
+				pinctrl-1 = <&cam_flash_sleep>;
 			};
 		};
 	};
@@ -215,26 +213,26 @@
 
 	i2c_8: i2c@8 {
 		cell-index = <8>;
-                compatible = "i2c-gpio";
-                i2c-gpio-scl = <&msm_gpio 1 0x00>;
-                i2c-gpio-sda = <&msm_gpio 0 0x00>;
-                #address-cells = <1>;
-                #size-cells = <0>;
+		compatible = "i2c-gpio";
+		i2c-gpio-scl = <&msm_gpio 1 0x00>;
+		i2c-gpio-sda = <&msm_gpio 0 0x00>;
 		i2c-gpio,delay-us = <2>;
-		pn547@2B {
-			compatible = "pn547";
-			reg = <0x2B>;
+		#address-cells = <1>;
+		#size-cells = <0>;
+		sec-nfc@27 {
+			compatible = "sec-nfc";
+			reg = <0x27>;
 			interrupt-parent = <&msm_gpio>;
 			interrupts = <21 0>;
-			pinctrl-names = "nfc_active","nfc_suspend";
+			pinctrl-names = "default","nfc_suspend";
 			pinctrl-0 = <&nfc_int_active &nfc_enable_active &nfc_firmware_active &nfc_i2c_active>;
 			pinctrl-1 = <&nfc_int_suspend &nfc_enable_suspend &nfc_firmware_suspend &nfc_i2c_suspend>;
-			pn547,firm-gpio = <&msm_gpio 49 0x00>;
-			pn547,ven-gpio = <&msm_gpio 20 0x00>;
-			pn547,irq-gpio = <&msm_gpio 21 0x01>;
-			nfc_ldo-supply = <&pm8916_l14>;
+			sec-nfc,firm-gpio = <&msm_gpio 49 0x01>;
+			sec-nfc,ven-gpio = <&msm_gpio 20 0x01>;
+			sec-nfc,irq-gpio = <&msm_gpio 21 0x00>;
 			clocks = <&clock_rpm clk_bb_clk2_pin>;
 			clock-names = "nfc_clock";
+			nfc_ldo-supply = <&pm8916_l14>;
 		};
 	};
 
@@ -242,29 +240,6 @@
 		compatible = "qcom,i2c-msm-v2";
 		qcom,scl-gpio = <&msm_gpio 7 0>;
 		qcom,sda-gpio = <&msm_gpio 6 0>;
-		k2hh@1D {
-			compatible = "stm,k2hh";
-			reg = <0x1D>;
-			interrupt-parent = <&msm_gpio>;
-			interrupts = <115 0>;
-			stm,irq_gpio = <&msm_gpio 115 0x00>;
-			stm,reg_vdd = "8916_l17";
-			stm,reg_vio = "8916_l5";
-			stm,axis_map_x = <0>;
-			stm,axis_map_y = <1>;
-			stm,axis_map_z = <2>;
-			stm,axis_map2_x = <0>;
-			stm,axis_map2_y = <1>;
-			stm,axis_map2_z = <2>;
-			stm,negate_x = <1>;
-			stm,negate_y = <0>;
-			stm,negate_z = <0>;
-			stm,negate2_x = <0>;
-			stm,negate2_y = <0>;
-			stm,negate2_z = <1>;
-			stm,poll_interval = <100>;
-			stm,min_interval = <2>;
-		};
 		k303c_acc@1c {
 			compatible = "k303c_acc";
 			reg = <0x1c>;
@@ -273,15 +248,15 @@
 			k303c_acc,vdd-supply = <&pm8916_l17>;
 			k303c_acc,vio-supply = <&pm8916_l5>;
 			k303c_acc,gpio_int1 = <&msm_gpio 115 0x00>;
-			k303c_acc,fs_range = <0x00>;
-			k303c_acc,axis_map_x = <1>;
-			k303c_acc,axis_map_y = <0>;
-			k303c_acc,axis_map_z = <2>;
-			k303c_acc,negate_x = <0>;
-			k303c_acc,negate_y = <1>;
-			k303c_acc,negate_z = <1>;
 			k303c_acc,poll_interval = <100>;
 			k303c_acc,min_interval = <2>;
+			k303c_acc,fs_range = <0x00>;
+			k303c_acc,axis_map_x = <0>;
+			k303c_acc,axis_map_y = <1>;
+			k303c_acc,axis_map_z = <2>;
+			k303c_acc,negate_x = <1>;
+			k303c_acc,negate_y = <0>;
+			k303c_acc,negate_z = <0>;
 		};
 		k303c_mag@1e {
 			compatible = "k303c_mag";
@@ -294,12 +269,12 @@
 			k303c_mag,poll_interval = <100>;
 			k303c_mag,min_interval = <13>;
 			k303c_mag,fs_range = <0x60>;
-			k303c_mag,axis_map_x = <1>;
-			k303c_mag,axis_map_y = <0>;
+			k303c_mag,axis_map_x = <0>;
+			k303c_mag,axis_map_y = <1>;
 			k303c_mag,axis_map_z = <2>;
-			k303c_mag,negate_x = <0>;
-			k303c_mag,negate_y = <1>;
-			k303c_mag,negate_z = <1>;
+			k303c_mag,negate_x = <1>;
+			k303c_mag,negate_y = <0>;
+			k303c_mag,negate_z = <0>;
 		};
 		gp2a-i2c@44{
 			compatible = "gp2a-i2c";
@@ -323,10 +298,9 @@
 			"SPK_RX_BIAS", "MCLK",
 			"INT_LDO_H", "MCLK",
 			"MIC BIAS External", "Handset Mic",
-			"MIC BIAS External2", "Headset Mic",
 			"MIC BIAS External", "Secondary Mic",
 			"AMIC1", "MIC BIAS External",
-			"AMIC2", "MIC BIAS External2",
+			"AMIC2", "Headset Mic",
 			"AMIC3", "MIC BIAS External";
 		pinctrl-names = "cdc_lines_act",
 				"cdc_lines_sus";
@@ -337,7 +311,7 @@
 	samsung,gpio_settings{
 		compatible = "sec_gpio_sett";
 		pinctrl-names = "sec_gpio_active","sec_gpio_suspend";
-		pinctrl-0 = <&home_key_pin>;
+		pinctrl-0 = <&muic_int_pin &home_key_pin>;
 		pinctrl-1 = <>;
 	};
 
@@ -374,6 +348,18 @@
 		};
 	};
 
+	hall {
+		status = "okay";
+		compatible = "hall";
+		interrupt-parent = <&msm_gpio>;
+		interrupts = <52 0>;
+		hall,gpio_flip_cover = <&msm_gpio 52 0>;
+		hall_vdd-supply = <&pm8916_l5>;
+		pinctrl-names = "flipcover_active","flipcover_suspend";
+		pinctrl-0 = <&hall_int_active>;
+		pinctrl-1 = <&hall_int_suspend>;
+	};
+
 	i2c_1: i2c@78b5000 { /* BLSP1 QUP1 */
 		status="disable";
 	};
@@ -397,8 +383,8 @@
 			sm5502,gpio-scl = <&msm_gpio 3 0x00>;
 			sm5502,uarton-gpio = <&msm_gpio 114 0x00>;
 			pinctrl-names = "sm5502_i2c_active","sm5502_i2c_suspend";
-			pinctrl-0 = <&muic_i2c_active &muic_int_pin &muic_chg_det>;
-			pinctrl-1 = <&muic_i2c_suspend &muic_int_pin &muic_chg_det>;
+			pinctrl-0 = <&muic_i2c_active>;
+			pinctrl-1 = <&muic_i2c_suspend>;
 		};
 	};
 
@@ -417,13 +403,13 @@
 		qcom,earjack-read-vadc = <&pm8916_vadc>;
 
 		det-zones-list = <&det_zones 0 10000 10 0>,
-						 <&det_zones 611 10000 10 0>,
-						 <&det_zones 1811 10000 10 1>,
-						 <&det_zones 9999 10000 10 1>;
-		but-zones-list = <&but_zones 0 0 195>,
-						 <&but_zones 1 196 280>,
-						 <&but_zones 2 281 999>;
-		mpp-channel-scaling = <2 1 3>;
+						 <&det_zones 975 10000 10 0>,
+						 <&det_zones 976 10000 10 1>,
+						 <&det_zones 1810 10000 10 1>;
+		but-zones-list = <&but_zones 0 0 325>,
+						 <&but_zones 1 326 457>,
+						 <&but_zones 2 458 999>;
+		mpp-channel-scaling = <2 1 1>;
 		pinctrl-names = "earjack_gpio_active","earjack_gpio_suspend";
 		pinctrl-0 = <&earjack_det_act &earjack_switch_act>;
 		pinctrl-1 = <&earjack_det_sus &earjack_switch_sus>;
@@ -547,11 +533,6 @@
        qcom,mdss-pref-prim-intf = "dsi";
 };
 
-&dsi_himax_tft_qhd_video{
-      qcom,mdss-dsi-bl-pmic-control-type = "bl_ctrl_gpio_swing";
-      qcom,lcd-pwm-bl-gpio = <&msm_gpio 50 0>;
-};
-
 &pmx_lcd_esd_det {
 	qcom,num-grp-pins = <1>;
 	qcom,pins = <&gp 69>;
@@ -572,36 +553,63 @@
                  qcom,pins = <&gp 98>;
 };
 
+&dsi_himax_tft_qhd_video {
+	samsung,panel-backlight-tft-gpio1 = <&msm_gpio 50 0>;
+	samsung,panel-backlight-tft-gpio2 = <&msm_gpio 98 0>;
+	samsung,panel-extra-power-gpio1 = <&msm_gpio 102 0>;
+	samsung,panel-extra-power-gpio2 = <&msm_gpio 25 0>;
+	qcom,mdss-dsi-bl-pmic-control-type = "bl_ctrl_ss_pwm";
+		/*
+	* ************************************************************************************************************************
+	* Scaled level to index mappings
+	* ************************************************************************************************************************
+	*/
+	samsung,scaled_level_map_table_revA = <
+	/* <idx>	    <from>       <till>     <scaled_level> */
+		0		0		0		0
+		1		1		7		32
+		2		8		14		31
+		3		15		22		30
+		4		23		29		29
+		5		30		37		28
+		6		38		44		27
+		7		45		52		26
+		8		53		59		25
+		9		60		67		24
+		10		68		75		23
+		11		76		82		22
+		12		83		92		21
+		13		93		102		20
+		14		103		112		19
+		15		113		122		18
+		16		123		133		17
+		17		134		143		16
+		18		144		153		15
+		19		154		163		14
+		20		164		173		13
+		21		174		183		12
+		22		184		193		11
+		23		194		206		10
+		24		207		218		9
+		25		219		231		8
+		26		232		243		7
+		27		244		255		6
+		>;
+};
+
+
+&dsi_sdc_tft_qhd_video{
+	samsung,panel-backlight-tft-gpio1 = <&msm_gpio 50 0>;
+	samsung,panel-backlight-tft-gpio2 = <&msm_gpio 98 0>;
+	samsung,panel-extra-power-gpio1 = <&msm_gpio 102 0>;
+	samsung,panel-extra-power-gpio2 = <&msm_gpio 25 0>;
+};
+
 &mdss_dsi0 {
-	qcom,dsi-pref-prim-pan = <&dsi_himax_tft_qhd_video>;
 	pinctrl-names = "mdss_default", "mdss_sleep";
-	pinctrl-0 = <&mdss_dsi_active &lcd_esd_det_active &pmx_pwm_bl_active>;
+	pinctrl-0 = <&mdss_dsi_active &lcd_esd_det_active &pmx_pwm_bl_active &pmx_bl_ctrl_active>;
 	pinctrl-1 = <&mdss_dsi_suspend &lcd_esd_det_suspend &pmx_pwm_bl_suspend &pmx_bl_ctrl_suspend>;
-	qcom,platform-reset-gpio = <&msm_gpio 25 0>;
-	qcom,platform-bklight-en-gpio = <&msm_gpio 98 0>;
-	qcom,platform-enable-gpio = <&msm_gpio 102 0>;
 };
-
-&pm8916_chg {
-	status = "ok";
-	qcom,charging-disabled;
-};
-
-/ {
-	mtp_batterydata: qcom,battery-data {
-		qcom,rpull-up-kohm = <100>;
-		qcom,vref-batt-therm = <1800000>;
-
-		#include "batterydata-palladium.dtsi"
-	};
-};
-
-&pm8916_bms {
-	status = "ok";
-	qcom,battery-data = <&mtp_batterydata>;
-};
-
-
 
 &qcom_tzlog {
 	status = "okay";
