--- a/arch/arm/configs/msm8916_sec_defconfig
+++ b/arch/arm/configs/msm8916_sec_defconfig
@@ -1,10 +1,16 @@
 # Support LZ4 KERNEL Compress
-CONFIG_KERNEL_LZ4=y
+# CONFIG_KERNEL_LZ4 is not set
 CONFIG_DECOMPRESS_LZ4=y
+CONFIG_KERNEL_XZ=y
+CONFIG_DECOMPRESS_XZ=y
 CONFIG_RD_LZ4=y
 CONFIG_DEFAULT_CFQ=y
+
+CONFIG_LOCALVERSION="-Netherrack"
+
 # CONFIG_ARM_PATCH_PHYS_VIRT is not set
-CONFIG_SYSVIPC=y
+# CONFIG_SAMSUNG_DEBUG_DISPLAY is not set
+# CONFIG_SYSVIPC is not set
 CONFIG_AUDIT=y
 CONFIG_NO_HZ=y
 CONFIG_HIGH_RES_TIMERS=y
@@ -24,8 +30,8 @@ CONFIG_NAMESPACES=y
 # CONFIG_UTS_NS is not set
 # CONFIG_IPC_NS is not set
 # CONFIG_PID_NS is not set
-# CONFIG_LEGACY_PTYS is not set
-# CONFIG_INPUT_MOUSE is not set
+# CONFIG_DEVMEM is not set
+# CONFIG_DEVKMEM is not set
 CONFIG_RELAY=y
 CONFIG_BLK_DEV_INITRD=y
 CONFIG_RD_BZIP2=y
@@ -36,7 +42,7 @@ CONFIG_KALLSYMS_ALL=y
 CONFIG_EMBEDDED=y
 # CONFIG_SLUB_DEBUG is not set
 CONFIG_PROFILING=y
-CONFIG_OPROFILE=m
+CONFIG_OPROFILE=y
 CONFIG_KPROBES=y
 CONFIG_CC_STACKPROTECTOR_REGULAR=y
 CONFIG_MODULES=y
@@ -63,6 +69,7 @@ CONFIG_HIGHMEM=y
 CONFIG_ENABLE_VMALLOC_SAVING=y
 CONFIG_CP_ACCESS=y
 CONFIG_ARM_DECOMPRESSOR_LIMIT=0x3200000
+CONFIG_SCHED_FREQ_INPUT=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
@@ -81,21 +88,28 @@ CONFIG_SEC_PM_DEBUG=y
 CONFIG_NET=y
 CONFIG_PACKET=y
 CONFIG_UNIX=y
+CONFIG_XFRM=y
 CONFIG_XFRM_USER=y
 CONFIG_NET_KEY=y
 CONFIG_INET=y
 CONFIG_IP_MULTICAST=y
+CONFIG_CRYPTO_GCM=y
+CONFIG_INET_IPCOMP=y
+CONFIG_INET6_XFRM_MODE_TRANSPORT=y
 CONFIG_IP_ADVANCED_ROUTER=y
 CONFIG_IP_MULTIPLE_TABLES=y
+CONFIG_IP_MULTICAST=y
 CONFIG_IP_ROUTE_VERBOSE=y
 CONFIG_IP_PNP=y
 CONFIG_IP_PNP_DHCP=y
 CONFIG_INET_AH=y
 CONFIG_INET_ESP=y
+CONFIG_INET_XFRM_TUNNEL=y
 CONFIG_INET_XFRM_MODE_TUNNEL=y
 CONFIG_INET_XFRM_MODE_TRANSPORT=y
 # CONFIG_INET_XFRM_MODE_BEET is not set
 # CONFIG_INET_LRO is not set
+CONFIG_INET_DIAG_DESTROY=y
 CONFIG_IPV6=y
 CONFIG_IPV6_PRIVACY=y
 CONFIG_IPV6_ROUTER_PREF=y
@@ -106,6 +120,9 @@ CONFIG_INET6_ESP=y
 CONFIG_INET6_IPCOMP=y
 CONFIG_IPV6_MIP6=y
 CONFIG_IPV6_MULTIPLE_TABLES=y
+CONFIG_INET6_XFRM_MODE_TUNNEL=y
+CONFIG_INET6_XFRM_MODE_BEET=y
+CONFIG_NETFILTER_XTABLES=y
 CONFIG_IPV6_SUBTREES=y
 CONFIG_NETFILTER=y
 CONFIG_NF_CONNTRACK=y
@@ -137,6 +154,7 @@ CONFIG_NETFILTER_XT_TARGET_NOTRACK=y
 CONFIG_NETFILTER_XT_TARGET_TPROXY=y
 CONFIG_NETFILTER_XT_TARGET_TRACE=y
 CONFIG_NETFILTER_XT_TARGET_SECMARK=y
+CONFIG_NETFILTER_XT_TARGET_TEE=y
 CONFIG_NETFILTER_XT_TARGET_TCPMSS=y
 CONFIG_NETFILTER_XT_TARGET_IDLETIMER=y
 CONFIG_NETFILTER_XT_MATCH_COMMENT=y
@@ -169,6 +187,7 @@ CONFIG_NF_CONNTRACK_IPV4=y
 CONFIG_IP_NF_IPTABLES=y
 CONFIG_IP_NF_MATCH_AH=y
 CONFIG_IP_NF_MATCH_ECN=y
+CONFIG_IP_NF_MATCH_RPFILTER=y
 CONFIG_IP_NF_MATCH_TTL=y
 CONFIG_IP_NF_FILTER=y
 CONFIG_IP_NF_TARGET_REJECT=y
@@ -184,13 +203,26 @@ CONFIG_IP_NF_ARPFILTER=y
 CONFIG_IP_NF_ARP_MANGLE=y
 CONFIG_NF_CONNTRACK_IPV6=y
 CONFIG_IP6_NF_IPTABLES=y
+CONFIG_IP6_NF_MATCH_RPFILTER=y
 CONFIG_IP6_NF_FILTER=y
 CONFIG_IP6_NF_TARGET_REJECT=y
 CONFIG_IP6_NF_MANGLE=y
 CONFIG_IP6_NF_RAW=y
 CONFIG_BRIDGE_NF_EBTABLES=y
 CONFIG_BRIDGE_EBT_BROUTE=y
+CONFIG_L2TP=y
+CONFIG_L2TP_DEBUGFS=y
+CONFIG_L2TP_V3=y
+CONFIG_L2TP_IP=y
+CONFIG_L2TP_ETH=y
 CONFIG_BRIDGE=y
+CONFIG_NET_CORE=y
+CONFIG_NET_CLS_BASIC=y
+CONFIG_NET_CLS=y
+CONFIG_NET_ACT_MIRRED=y
+CONFIG_NET_EMATCH=y
+CONFIG_NET_SCH_INGRESS=y
+CONFIG_NET_KEY=y
 CONFIG_NET_SCHED=y
 CONFIG_NET_SCH_HTB=y
 CONFIG_NET_SCH_PRIO=y
@@ -210,10 +242,18 @@ CONFIG_RMNET_DATA_FC=y
 CONFIG_RMNET_DATA_DEBUG_PKT=y
 CONFIG_SOCKEV_NLMCAST=y
 CONFIG_BT=y
+CONFIG_BT_RFCOMM=y
+CONFIG_BT_RFCOMM_TTY=y
+CONFIG_BT_BNEP=y
+CONFIG_BT_BNEP_MC_FILTER=y
+CONFIG_BT_BNEP_PROTO_FILTER=y
+CONFIG_BT_HIDP=y
 CONFIG_CFG80211=y
+CONFIG_CFG80211_DEFAULT_PS=y
 CONFIG_NL80211_TESTMODE=y
 CONFIG_CFG80211_INTERNAL_REGDB=y
-#CONFIG_NFC_QNCI=y
+CONFIG_NFC_QNCI=y
+# CONFIG_NFC_NQ=y
 CONFIG_IPC_ROUTER=y
 CONFIG_IPC_ROUTER_SECURITY=y
 CONFIG_CMA=y
@@ -221,6 +261,7 @@ CONFIG_CMA_SIZE_MBYTES=8
 CONFIG_BLK_DEV_LOOP=y
 CONFIG_BLK_DEV_RAM=y
 # CONFIG_APDS9930 is not set
+CONFIG_UID_CPUTIME=y
 CONFIG_QSEECOM=y
 CONFIG_SCSI=y
 CONFIG_SCSI_TGT=y
@@ -235,20 +276,25 @@ CONFIG_MD=y
 CONFIG_BLK_DEV_DM=y
 CONFIG_DM_CRYPT=y
 CONFIG_DM_REQ_CRYPT=y
+# CONFIG_DM_VERITY is not set
 CONFIG_NETDEVICES=y
 CONFIG_DUMMY=y
 CONFIG_TUN=y
 CONFIG_KS8851=y
 CONFIG_MSM_RMNET_BAM=y
+CONFIG_ARCH_MMAP_RND_BITS=16
 CONFIG_PPP=y
 CONFIG_PPP_BSDCOMP=y
 CONFIG_PPP_DEFLATE=y
-CONFIG_PPP_MPPE=y
 CONFIG_PPPOE=y
-CONFIG_PPPOLAC=y
-CONFIG_PPPOPNS=y
 CONFIG_PPP_ASYNC=y
 CONFIG_PPP_SYNC_TTY=y
+CONFIG_PPP_MPPE=y
+CONFIG_PPPOLAC=y
+CONFIG_PPP_FILTER=y
+CONFIG_PPP_MULTILINK=y
+CONFIG_PPPOL2TP=y
+CONFIG_PPPOPNS=y
 CONFIG_USB_USBNET=y
 CONFIG_USB_NET_SMSC75XX=y
 CONFIG_USB_NET_SMSC95XX=y
@@ -256,21 +302,26 @@ CONFIG_WCNSS_CORE=y
 CONFIG_WCNSS_CORE_PRONTO=y
 CONFIG_WCNSS_MEM_PRE_ALLOC=y
 CONFIG_WCNSS_REGISTER_DUMP_ON_BITE=y
+CONFIG_WIRELESS=y
+CONFIG_WIRELESS_EXT_SYSFS=y
+CONFIG_WEXT_CORE=y
+CONFIG_WEXT_PROC=y
+CONFIG_WLAN=y
+CONFIG_WIRELESS_EXT=y
+CONFIG_WEXT_PRIV=y
 CONFIG_INPUT_EVDEV=y
-CONFIG_INPUT_EVBUG=m
+CONFIG_INPUT_EVBUG=y
 CONFIG_KEYBOARD_GPIO=y
 CONFIG_INPUT_JOYSTICK=y
 CONFIG_JOYSTICK_XPAD=y
 CONFIG_INPUT_TOUCHSCREEN=y
-CONFIG_INPUT_BOOSTER=y
-CONFIG_SECURE_TOUCH=y
-CONFIG_INPUT_MT_WRAPPER=y
 CONFIG_INPUT_MISC=y
 CONFIG_INPUT_HBTP_INPUT=y
 # CONFIG_SENSORS_MPU6050 is not set
-# CONFIG_SENSORS_LIS3DH is not set
+CONFIG_SENSORS_LIS3DH is not set
 CONFIG_INPUT_UINPUT=y
-CONFIG_INPUT_GPIO=m
+CONFIG_INPUT_GPIO=y
+# CONFIG_VT is not set
 # CONFIG_SENSORS_MMC3416X is not set
 # CONFIG_SENSORS_AKM09911 is not set
 # CONFIG_SENSORS_AKM8963 is not set
@@ -287,26 +338,29 @@ CONFIG_I2C_CHARDEV=y
 CONFIG_I2C_MSM_V2=y
 CONFIG_I2C_GPIO=y
 CONFIG_SLIMBUS_MSM_NGD=y
+CONFIG_DMADEVICES=y
+CONFIG_HAS_DMA=y
+CONFIG_QCOM_SPS_DMA=y
 CONFIG_SPI=y
 CONFIG_SPI_QUP=y
-CONFIG_SPI_SPIDEV=m
+CONFIG_SPI_SPIDEV=y
 CONFIG_SPMI=y
 CONFIG_SPMI_MSM_PMIC_ARB=y
 CONFIG_MSM_QPNP_INT=y
 CONFIG_DEBUG_GPIO=y
 CONFIG_GPIO_SYSFS=y
 CONFIG_GPIO_QPNP_PIN=y
-CONFIG_GPIO_QPNP_PIN_DEBUG=y
 CONFIG_POWER_SUPPLY=y
-#CONFIG_SMB135X_CHARGER=y
+# CONFIG_SMB135X_CHARGER is not set
 # CONFIG_SMB1360_CHARGER_FG is not set
-#CONFIG_SMB358_CHARGER=y
+# CONFIG_SMB358_CHARGER is not set
 # CONFIG_BATTERY_BCL is not set
 # CONFIG_QPNP_VM_BMS is not set
 # CONFIG_QPNP_LINEAR_CHARGER is not set
 CONFIG_POWER_RESET=y
 CONFIG_POWER_RESET_MSM=y
 CONFIG_MSM_DLOAD_MODE=y
+CONFIG_QCOM_HARDREBOOT_IMPLEMENTATION=y
 CONFIG_SENSORS_QPNP_ADC_VOLTAGE=y
 CONFIG_SENSORS_QPNP_ADC_CURRENT=y
 CONFIG_SENSORS_QPNP_CURRENT_MONITOR=y
@@ -409,6 +463,7 @@ CONFIG_USB_ANDROID_SAMSUNG_COMPOSITE=y
 CONFIG_USB_ANDROID_SAMSUNG_SIDESYNC=y
 CONFIG_USB_NOTIFY_LAYER=y
 CONFIG_USB_NOTIFIER=y
+CONFIG_USB_HOST_NOTIFY=y
 CONFIG_USB_STORAGE_DETECT=y
 CONFIG_USB_NCM_SUPPORT_MTU_CHANGE=y
 CONFIG_USB_DUN_SUPPORT=y
@@ -419,11 +474,12 @@ CONFIG_MMC_CLKGATE=y
 CONFIG_MMC_EMBEDDED_SDIO=y
 CONFIG_MMC_PARANOID_SD_INIT=y
 CONFIG_MMC_BLOCK_MINORS=32
-CONFIG_MMC_TEST=m
+# CONFIG_MMC_TEST is not set
 CONFIG_MMC_SUPPORT_BKOPS_MODE=y
 CONFIG_MMC_BKOPS_NODE_UID=1000
 CONFIG_MMC_BKOPS_NODE_GID=1001
-CONFIG_MMC_BLOCK_TEST=y
+# CONFIG_MMC_BLOCK_TEST is not set
+CONFIG_MMC_BLOCK_DEFERRED_RESUME=y
 CONFIG_MMC_SDHCI=y
 CONFIG_MMC_SDHCI_PLTFM=y
 CONFIG_MMC_SDHCI_MSM=y
@@ -436,6 +492,8 @@ CONFIG_RTC_DRV_QPNP=y
 CONFIG_UIO=y
 CONFIG_UIO_MSM_SHAREDMEM=y
 CONFIG_STAGING=y
+CONFIG_ZSMALLOC=y
+CONFIG_ZRAM=y
 CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
 CONFIG_ASHMEM=y
@@ -455,11 +513,12 @@ CONFIG_QPNP_RESIN=y
 CONFIG_QPNP_REVID=y
 CONFIG_MSM_AVTIMER=y
 CONFIG_MSM_BUS_SCALING=y
-CONFIG_MSM_BUSPM_DEV=m
+# CONFIG_MSM_BUSPM_DEV is not set
 CONFIG_BUS_TOPOLOGY_ADHOC=y
 CONFIG_MSM_MDSS_PLL=y
 CONFIG_REMOTE_SPINLOCK_MSM=y
 CONFIG_MSM_IOMMU_V1=y
+CONFIG_MMU500_ACTIVE_PREFETCH_BUG_WITH_SECTION_MAPPING=y
 CONFIG_PWM=y
 CONFIG_PWM_QPNP=y
 CONFIG_MOBICORE_SUPPORT=y
@@ -479,6 +538,7 @@ CONFIG_MSM_SMEM=y
 CONFIG_MSM_SMEM_LOGGING=y
 CONFIG_MSM_SMP2P=y
 CONFIG_MSM_SMP2P_TEST=y
+# CONFIG_MSM_DMA_TEST is not set
 CONFIG_MSM_SPM=y
 CONFIG_MSM_L2_SPM=y
 CONFIG_MSM_ADSP_LOADER=y
@@ -503,9 +563,18 @@ CONFIG_EXT3_FS=y
 # CONFIG_EXT3_DEFAULTS_TO_ORDERED is not set
 CONFIG_EXT4_FS=y
 CONFIG_EXT4_FS_SECURITY=y
+CONFIG_SDCARD_FS=y
+CONFIG_SDCARD_FS_FADV_NOACTIVE=y
+CONFIG_CONFIGFS_FS=y
 CONFIG_FUSE_FS=y
 CONFIG_VFAT_FS=y
 CONFIG_EXFAT_FS=y
+CONFIG_F2FS_FS=y
+CONFIG_F2FS_STAT_FS=y
+CONFIG_F2FS_FS_XATTR=y
+CONFIG_F2FS_FS_POSIX_ACL=y
+CONFIG_F2FS_FS_SECURITY=y
+CONFIG_CRYPTO_LZO=y
 CONFIG_TMPFS=y
 CONFIG_NLS_CODEPAGE_437=y
 CONFIG_NLS_ASCII=y
@@ -519,6 +588,7 @@ CONFIG_SCHEDSTATS=y
 CONFIG_TIMER_STATS=y
 CONFIG_MSM_RTB=y
 CONFIG_MSM_RTB_SEPARATE_CPUS=y
+# CONFIG_CPUSETS is not set
 CONFIG_IPC_LOGGING=y
 CONFIG_DYNAMIC_DEBUG=y
 CONFIG_DEBUG_USER=y
@@ -528,21 +598,33 @@ CONFIG_SAMSUNG_JACK=y
 CONFIG_KEYS=y
 CONFIG_SECURITY=y
 CONFIG_SECURITY_NETWORK=y
+CONFIG_SECURITY_PERF_EVENTS_RESTRICT=y
 CONFIG_LSM_MMAP_MIN_ADDR=4096
-# CONFIG_SECURITY_SELINUX is not set
+#CONFIG_SECURITY_SELINUX=y
 CONFIG_CRYPTO_NULL=y
 CONFIG_CRYPTO_XTS=y
 CONFIG_CRYPTO_XCBC=y
+CONFIG_CRYPTO_CTR=y
 CONFIG_CRYPTO_MD4=y
 CONFIG_CRYPTO_ARC4=y
 CONFIG_CRYPTO_TWOFISH=y
 CONFIG_CRYPTO_DEV_QCRYPTO=y
 CONFIG_CRYPTO_DEV_QCE=y
 CONFIG_CRYPTO_DEV_QCEDEV=y
+CONFIG_KERNEL_MODE_NEON=y
+CONFIG_CRYPTO_ALGAPI=y
+CONFIG_CRYPTO_ALGAPI2=y
+CONFIG_CRYPTO_SHA1_ARM_NEON=y
+CONFIG_CRYPTO_SHA512_ARM_NEON=y
+CONFIG_CRYPTO_AES_ARM_BS=y
+CONFIG_CRYPTO_SHA1_ARM=y
+CONFIG_MSM_PERFORMANCE=y
+CONFIG_MSM_CORE_CTL_HELPER=y
 CONFIG_FB_MSM_MDSS_SAMSUNG=y
 
 CONFIG_DEBUG_INFO=y
 CONFIG_SEC_DEBUG=y
+CONFIG_SEC_DEBUG_USER=y
 CONFIG_SEC_BSP=y
 CONFIG_SEC_MISC=y
 CONFIG_SEC_DEBUG_SCHED_LOG=y
@@ -563,11 +645,14 @@ CONFIG_PRINTK_NOCACHE=y
 CONFIG_CPU_FREQ_LIMIT=y
 CONFIG_CPU_FREQ_LIMIT_USERSPACE=y
 CONFIG_SEC_THERMISTOR=y
-# CONFIG_RESTART_REASON_SEC_PARAM is not set
+CONFIG_USER_RESET_DEBUG=y
+CONFIG_LOGCAT_SIZE=512
+
 CONFIG_TCP_CONG_ADVANCED=y
 CONFIG_TCP_CONG_BIC=y
 CONFIG_DEFAULT_BIC=y
 CONFIG_DEFAULT_TCP_CONG="bic"
+CONFIG_MISC_FILESYSTEMS=y
 
 #CS & Post CS Flags
 CONFIG_BALANCE_ANON_FILE_RECLAIM=y
@@ -639,9 +724,7 @@ CONFIG_HID_ZEROPLUS=y
 CONFIG_HID_ZYDACRON=y
 CONFIG_HID_LOGITECH=y
 CONFIG_HID_LOGITECH_DJ=y
-#
-# ODE and DIR Encryption
-#
+#ODE and DIR Encryption
 CONFIG_CRYPTO=y
 CONFIG_CRYPTO_SHA1=y
 CONFIG_CRYPTO_SHA256=y
@@ -651,8 +734,28 @@ CONFIG_ECRYPT_FS=y
 CONFIG_WTL_ENCRYPTION_FILTER=y
 CONFIG_KEYS=y
 CONFIG_KEYS_DEBUG_PROC_KEYS=y
+CONFIG_CRYPTO_AES_ARM=y
 
 CONFIG_SECCOMP=y
 #optimize mmc block delay on resume
 CONFIG_MMC_BLOCK_DEFERRED_RESUME=y
 
+# TTL
+CONFIG_NETFILTER_XT_TARGET_HL=y
+
+#Touch Disabler
+CONFIG_TOUCH_DISABLER=y
+
+#
+# Qualcomm Atheros Prima WLAN module
+#
+# CONFIG_PRIMA_WLAN is not set
+CONFIG_PRONTO_WLAN=y
+CONFIG_PRIMA_WLAN_BTAMP=n
+CONFIG_PRIMA_WLAN_LFR=y
+CONFIG_PRIMA_WLAN_OKC=y
+CONFIG_PRIMA_WLAN_11AC_HIGH_TP=y
+CONFIG_WLAN_FEATURE_11W=y
+CONFIG_QCOM_VOWIFI_11R=y
+CONFIG_ENABLE_LINUX_REG=y
+CONFIG_WLAN_OFFLOAD_PACKETS=y
