--- a/arch/arm/configs/msm8916_sec_defconfig
+++ b/arch/arm/configs/msm8916_sec_defconfig
@@ -752,6 +752,7 @@ CONFIG_TOUCH_DISABLER=y
 # CONFIG_PRIMA_WLAN is not set
 CONFIG_PRONTO_WLAN=y
 CONFIG_PRIMA_WLAN_BTAMP=n
+CONFIG_QCOM_TDLS=y
 CONFIG_PRIMA_WLAN_LFR=y
 CONFIG_PRIMA_WLAN_OKC=y
 CONFIG_PRIMA_WLAN_11AC_HIGH_TP=y
