defconfig: Enable CONFIG_NO_HZ_COMMON

--- a/arch/arm/configs/msm8916_sec_fortuna3g_eur_defconfig
+++ b/arch/arm/configs/msm8916_sec_fortuna3g_eur_defconfig
@@ -69,3 +69,6 @@ CONFIG_ZSWAP=y
 # DUAL SIM / SINGLE SIM Detection
 #CONFIG_CHECK_SIMSLOT_COUNT=y
 #CONFIG_CHECK_SIMSLOT_COUNT_GPIO=1008
+
+#CONFIG NO HZ COMMON
+CONFIG_NO_HZ_COMMON=y
