defconfig: Commonize CONFIG_NO_HZ_COMMON

--- a/arch/arm/configs/msm8916_sec_defconfig
+++ b/arch/arm/configs/msm8916_sec_defconfig
@@ -760,3 +760,6 @@ CONFIG_WLAN_FEATURE_11W=y
 CONFIG_QCOM_VOWIFI_11R=y
 CONFIG_ENABLE_LINUX_REG=y
 CONFIG_WLAN_OFFLOAD_PACKETS=y
+
+#CONFIG NO HZ COMMON
+CONFIG_NO_HZ_COMMON=y
