--- a/arch/arm/configs/msm8916_sec_fortuna3g_eur_defconfig
+++ b/arch/arm/configs/msm8916_sec_fortuna3g_eur_defconfig
@@ -62,9 +62,9 @@ CONFIG_APC_CPR_QUOT_BOOST=y
 
 # RTCC v3
 CONFIG_SWAP=y
-CONFIG_FRONTSWAP=y
+# CONFIG_FRONTSWAP is not set
 CONFIG_ZSMALLOC=y
-CONFIG_ZSWAP=y
+# CONFIG_ZSWAP is not set
 
 # DUAL SIM / SINGLE SIM Detection
 #CONFIG_CHECK_SIMSLOT_COUNT=y
