--- a/arch/arm/configs/msm8916_sec_fortunave3g_eur_defconfig
+++ b/arch/arm/configs/msm8916_sec_fortunave3g_eur_defconfig
@@ -61,9 +61,9 @@ CONFIG_TRACE_MODEM_MEM_FAIL=y
 
 # SSWAP
 CONFIG_SWAP=y
-CONFIG_FRONTSWAP=y
+# CONFIG_FRONTSWAP is not set
 CONFIG_ZSMALLOC=y
-CONFIG_ZSWAP=y
+# CONFIG_ZSWAP is not set
 
 #APC CPR QUOTIENT
 CONFIG_APC_CPR_QUOT_BOOST=y
