sdcardfs: Make it compile based on Android API the kernel is building for
Due to 2c66a15dddadde8a54fcacb142f4866f73d78071, it caused the internal and external storages to stop working on Samsung firmwares with Android API 22 below.

This should fix issue #2.

--- a/fs/sdcardfs/Kconfig
+++ b/fs/sdcardfs/Kconfig
@@ -18,7 +18,8 @@ config SDCARD_FS_CI_SEARCH
 
 config SDCARD_FS_XATTR
 	bool "Sdcardfs extended attribute"
-	default y
+	default y if CONFIG_SDCARD_FS_SEC_API_M=y
+	default n if CONFIG_SDCARD_FS_SEC_API_L=y
 	depends on SDCARD_FS
 	help
 	  Modification of sdcard file system for xattr
