defconfigs: Add config for e364770fc0d31e449c1175e31f30b9aa2c048f66

--- a/arch/arm/configs/msm8916_sec_fortunave3g_eur_defconfig
+++ b/arch/arm/configs/msm8916_sec_fortunave3g_eur_defconfig
@@ -7,6 +7,8 @@ CONFIG_RESTART_REASON_SEC_PARAM=y
 # SS Pinctrl Driver
 CONFIG_SEC_GPIO_SETTINGS=y
 
+CONFIG_SDCARD_FS_SEC_API_M=y
+
 #Vibrator
 CONFIG_MSM_VIBRATOR=y
 
