--- a/arch/arm/configs/msm8916_sec_fortunave3g_eur_lp_defconfig
+++ b/arch/arm/configs/msm8916_sec_fortunave3g_eur_lp_defconfig
@@ -1,5 +1,5 @@
 CONFIG_SEC_FORTUNA_PROJECT=y
-CONFIG_MACH_FORTUNA3G_EUR=y
+CONFIG_MACH_FORTUNAVE3G_EUR=y
 
 # HARD RESET
 CONFIG_RESTART_REASON_SEC_PARAM=y
@@ -7,7 +7,10 @@ CONFIG_RESTART_REASON_SEC_PARAM=y
 # SS Pinctrl Driver
 CONFIG_SEC_GPIO_SETTINGS=y
 
-CONFIG_SDCARD_FS_SEC_API_M=y
+CONFIG_SDCARD_FS_SEC_API_L=y
+
+#Vibrator
+CONFIG_MSM_VIBRATOR=y
 
 # MUIC
 CONFIG_SM5502_MUIC=y
@@ -16,16 +19,12 @@ CONFIG_MUIC_SUPPORT_RUSTPROOF=y
 CONFIG_USBID_STANDARD_VER_01=y
 
 #Touch Screen
-#CONFIG_TOUCHSCREEN_IST30XX=y
 CONFIG_TOUCHSCREEN_ZINITIX_BT541=y
 
 #LCD
-#CONFIG_FB_MSM_MIPI_HX8389C_QHD_VIDEO_PANEL=y
 CONFIG_PANEL_HX8389C_GH9607501A_QHD=y
 CONFIG_PANEL_S6D78A0_GH9607501A_QHD=y
-CONFIG_FB_MSM_MDSS_SAMSUNG=y
 
-#CHARGING/BATTERY
 CONFIG_MFD_RT5033=y
 CONFIG_MFD_RT5033_RESET_GPIO=n
 CONFIG_MFD_RT5033_SLDO_VBUSDET=y
@@ -35,9 +34,6 @@ CONFIG_SAMSUNG_LPM_MODE=y
 CONFIG_CHARGER_RT5033=y
 CONFIG_FUELGAUGE_RT5033=y
 CONFIG_REGULATOR_RT5033=y
-
-# VIBRATOR
-CONFIG_MSM_VIBRATOR=y
 
 #SENSOR
 CONFIG_SENSORS=y
@@ -52,22 +48,24 @@ CONFIG_RT_FLASH_LED=y
 CONFIG_FLED_RT5033=y
 CONFIG_FLED_RT5033_EXT_GPIO=y
 
-# CAMERA
-CONFIG_IMX219=y
+#CAMERA
+CONFIG_S5K4H5YB=y
 CONFIG_S5K5E3YX=y
 
-#APC CPR QUOTIENT
-CONFIG_APC_CPR_QUOT_BOOST=y
-
 #optimize mmc block delay on resume
-#CONFIG_MMC_BLOCK_DEFERRED_RESUME=y
+CONFIG_MMC_BLOCK_DEFERRED_RESUME=y
 
-# RTCC v3
+# DUAL SIM / SINGLE SIM Detection
+CONFIG_CHECK_SIMSLOT_COUNT=y
+CONFIG_CHECK_SIMSLOT_COUNT_GPIO=1008
+
+CONFIG_TRACE_MODEM_MEM_FAIL=y
+
+# SSWAP
 CONFIG_SWAP=y
 # CONFIG_FRONTSWAP is not set
 CONFIG_ZSMALLOC=y
 # CONFIG_ZSWAP is not set
 
-# DUAL SIM / SINGLE SIM Detection
-#CONFIG_CHECK_SIMSLOT_COUNT=y
-#CONFIG_CHECK_SIMSLOT_COUNT_GPIO=1008
+#APC CPR QUOTIENT
+CONFIG_APC_CPR_QUOT_BOOST=y
